--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:background="@color/colorAccent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainFragment">
+    tools:context=".ui.fragments.MainFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_sort"
             app:fab_label="Sort date" />
+
     </com.github.clans.fab.FloatingActionMenu>
 
 
